--- a/src/scss/components/_parcel.scss
+++ b/src/scss/components/_parcel.scss
@@ -374,24 +374,27 @@
           font-size: 12px;
           line-height: 16px;
           letter-spacing: 0.02em;
-          cursor: pointer;
-
-          &:hover {
-            color: #6250E5;
-          }
         }
+      }
 
-        a {
-          font-weight: 500;
-          font-size: 12px;
-          line-height: 16px;
-          letter-spacing: 0.02em;
-          text-decoration: none;
+      &-link {
+        cursor: pointer;
+
+        &:hover {
           color: #6250E5;
+        }
+      }
 
-          &:hover {
-            text-decoration: underline;
-          }
+      &-butt {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 16px;
+        letter-spacing: 0.02em;
+        text-decoration: none;
+        color: #6250E5;
+
+        &:hover {
+          text-decoration: underline;
         }
       }
     }
