--- a/src/scss/components/_elements.scss
+++ b/src/scss/components/_elements.scss
@@ -535,6 +535,7 @@
     font-size: 14px;
     line-height: 18px;
     letter-spacing: 0.02em;
+    transition: background-color $time, border-color $time;
 
     &.input-calendar {
       @include image('calendar-gray.svg', 18px auto, right 16px center);
@@ -569,6 +570,12 @@
       border: 1px solid #ED2222; 
     }
   }
+
+  &:hover:not(#{$inp}--disabled):not(#{$inp}--error) {
+    #{$inp}__value {
+      border-color: #9E91FB;
+    }
+  }
 }
 
 .inputUnit {
@@ -597,6 +604,12 @@
     &:nth-child(2) {
       padding-left: 8px;
     }
+
+    &:hover {
+      #{$unit}__value {
+        border-color: #9E91FB;
+      }
+    }
   }
 
   &__value {
@@ -610,6 +623,7 @@
     font-size: 14px;
     line-height: 18px;
     letter-spacing: 0.02em;
+    transition: border-color $time;
   }
 
   &__inf {
